Fix some low hanging lintian warnings
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16172 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,17 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   * [x86] Enable samsung-laptop driver
   * [sparc] Enable XVR1000 driver (Closes: #574243)
 
+  [ Ian Campbell ]
+  * Fixes/overrides for Linitan warnings:
+    - Add "(meta package)" to short description of linux-headers
+      metapackages, resolves empty-binary-package.
+    - Add dependency on ${misc:Depends} to all packages, resolves
+      debhelper-but-no-misc-depends. Required update to gencontrol.py to
+      augment rather than override headers_arch_depends read from templates.
+    - Override dbg-package-missing-depends for linux-image-*-dbg. It is not
+      necessary to install the kernel image package to use the dbg package
+      since the dbg package already contains a complete image with symbols.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
 
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
