Change BLK_CGROUP from module to built-in
so that cfq can be the default I/O scheduler again (Closes: #593720)


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16187 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,8 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
     - German (Holger Wansing) (Closes: #592226)
   * [x86] Enable samsung-laptop driver
   * [sparc] Enable XVR1000 driver (Closes: #574243)
+  * Change BLK_CGROUP from module to built-in so that cfq can be the
+    default I/O scheduler again (Closes: #593720)
 
   [ Ian Campbell ]
   * Fixes/overrides for Linitan warnings:
