* debian/changelog: Update. * debian/config/kernelarch-x86/config: Disable RT2860, RT2870, RT3090.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16207 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,6 +28,10 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
       necessary to install the kernel image package to use the dbg package
       since the dbg package already contains a complete image with symbols.
 
+  [ Bastian Blank ]
+  * Disable Ralink staging drivers, the in-tree ones reached "works-for-me"
+    status.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
 
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
