[mipsel/loongson-2f] Enable smtcfb (FB_SM7XX) driver (Closes: #594642)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16210 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   * [sparc] Enable XVR1000 driver (Closes: #574243)
   * Change BLK_CGROUP from module to built-in so that cfq can be the
     default I/O scheduler again (Closes: #593720)
+  * [mipsel/loongson-2f] Enable smtcfb (FB_SM7XX) driver (Closes: #594642)
 
   [ Ian Campbell ]
   * Fixes/overrides for Linitan warnings:
