* Fix netfilter CONFIG_COMPAT support.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16211 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -33,6 +33,9 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   * Disable Ralink staging drivers, the in-tree ones reached "works-for-me"
     status.
 
+  [ Aurelien Jarno ]
+  * Fix netfilter CONFIG_COMPAT support.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
 
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
