* [sh4] set VIRTUALIZATION.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16212 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -35,6 +35,7 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * Fix netfilter CONFIG_COMPAT support.
+  * [sh4] set VIRTUALIZATION.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
 
