add stable 2.6.35 releases
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16235 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -37,6 +37,9 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   * Fix netfilter CONFIG_COMPAT support.
   * [sh4] set VIRTUALIZATION.
 
+  [ maximilian attems]
+  * Add stable 2.6.35.3 and 2.6.35.4.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
 
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
