--- a/linux-2.6/debian/patches/series/1~experimental.3
+++ b/linux-2.6/debian/patches/series/1~experimental.3
@@ -1,1 +1,5 @@
 + bugfix/all/netfilter-fix-CONFIG_COMPAT-support.patch
+- bugfix/all/mm-fix-page-table-unmap-for-stack-guard-page-properl.patch
+- bugfix/all/mm-fix-up-some-user-visible-effects-of-the-stack-gua.patch
++ bugfix/all/stable/2.6.35.3.patch
++ bugfix/all/stable/2.6.35.4.patch
