* [mips] Add an octeon flavour.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16244 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -36,6 +36,7 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Fix netfilter CONFIG_COMPAT support.
   * [sh4] set VIRTUALIZATION.
+  * [mips] Add an octeon flavour.
 
   [ maximilian attems]
   * Add stable 2.6.35.3 and 2.6.35.4.
