--- a/linux-2.6/debian/patches/series/1~experimental.3
+++ b/linux-2.6/debian/patches/series/1~experimental.3
@@ -3,3 +3,4 @@
 - bugfix/all/mm-fix-up-some-user-visible-effects-of-the-stack-gua.patch
 + bugfix/all/stable/2.6.35.3.patch
 + bugfix/all/stable/2.6.35.4.patch
++ bugfix/mips/octeon-gcc-4.4.patch
