--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
+linux-2.6 (2.6.35-1~experimental.3) experimental; urgency=low
 
   [ Ritesh Raj Sarraf ]
   * Add .gnu_debuglink information into kernel modules (Closes: #555549)
@@ -41,7 +41,7 @@ linux-2.6 (2.6.35-1~experimental.3) UNRELEASED; urgency=low
   [ maximilian attems]
   * Add stable 2.6.35.3 and 2.6.35.4.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 18 Aug 2010 02:45:21 +0100
+ -- maximilian attems <maks@debian.org>  Mon, 06 Sep 2010 15:16:17 +0200
 
 linux-2.6 (2.6.35-1~experimental.2) experimental; urgency=low
 
