--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.36~rc4-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Sep 2010 01:25:14 +0100
+
 linux-2.6 (2.6.35-1~experimental.3) experimental; urgency=low
 
   [ Ritesh Raj Sarraf ]
