--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,8 @@ linux-2.6 (2.6.36~rc4-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * speakup: Update to match Debian package version 3.1.5.dfsg.1-1
+  * [x86] Add brcm80211 driver for Broadcom 802.11n wireless network
+    controllers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Sep 2010 01:25:14 +0100
 
