--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.36~rc5-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.36~rc5-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
     - 3c59x: Fix deadlock in vortex_error() (Closes: #595554)
@@ -9,7 +9,7 @@ linux-2.6 (2.6.36~rc5-1~experimental.1) UNRELEASED; urgency=low
     controllers
   * [x86] Set XEN_PLATFORM_PCI=y
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 13 Sep 2010 01:25:14 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Sep 2010 02:15:33 +0100
 
 linux-2.6 (2.6.35-1~experimental.3) experimental; urgency=low
 
