--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,8 @@ linux-2.6 (2.6.36~rc5-1~experimental.2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * linux-base: Remove dependency on libapt-pkg-perl (Closes: #589996, really)
+  * drm/i915: Ensure that the crtcinfo is populated during mode_fixup()
+    (Closes: #592415)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
