--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,8 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
   * Disable INTEL_IDLE.  It can no longer be built as a module and so was
     actually disabled by the previous version, but I do not consider it ready
     to build-in yet.
+  * Enable NETFILTER_XT_TARGET_CHECKSUM, NETFILTER_XT_TARGET_IDLETIMER,
+    NETFILTER_XT_MATCH_CPU, NETFILTER_XT_MATCH_IPVS
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
 
