--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,9 +15,11 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
     NETFILTER_XT_MATCH_CPU, NETFILTER_XT_MATCH_IPVS
   * Reenable LOCKUP_DETECTOR, accidentally disabled by the previous version
   * Enable modular AD525X_DPOT_I2C, ATM_NICSTAR, CAN_ESD_USB2, CHELSIO_T4VF,
-    FIREWIRE_NOSY, MTD_PCMCIA, ORINOCO_USB, PPS_CLIENT_LDISC, RAMOOPS,
-    SERIAL_MFD_HSU, WL1271_SDIO, WL1271_SPI
-  * Enable BT_HCIUART_ATH3K
+    FIREWIRE_NOSY, HID_ACRUX_FF, HID_ELECOM, INFINIBAND_CXGB4, INFINIBAND_QIB,
+    MTD_PCMCIA, ORINOCO_USB, PPS_CLIENT_LDISC, RAMOOPS, SERIAL_MFD_HSU,
+    UIO_NETX, USB_GSPCA_SPCA1528, USB_GSPCA_SQ930X, USB_SERIAL_SSU100,
+    USB_SERIAL_ZIO, WL1271_SDIO, WL1271_SPI
+  * Enable BT_HCIUART_ATH3K, USB_SERIAL_MOS7715_PARPORT
   * [x86] Enable modular SENSORS_PKGTEMP
   * Enable modular IR_CORE, RC_MAP, all IR decoders, IR_IMON, IR_MCEUSB,
     IR_ENE, IR_STREAMZAP
