--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.36~rc6-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
     - drm/i915: Ensure that the crtcinfo is populated during mode_fixup()
@@ -25,7 +25,7 @@ linux-2.6 (2.6.36~rc6-1~experimental.1) UNRELEASED; urgency=low
     IR_ENE, IR_STREAMZAP
   * [x86] Enable modular LIRC drivers
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 26 Sep 2010 15:34:10 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 03 Oct 2010 21:18:41 +0100
 
 linux-2.6 (2.6.36~rc5-1~experimental.1) experimental; urgency=low
 
