--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,8 @@
 linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
+  * qla4xxx: Fix build on some architectures lacking 64-bit I/O
+    (Closes: #598503)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
