--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,7 +7,8 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Staging: fix Makefile so brcm80211 will actually build
     (Closes: #599465)
   * [x86] Enable modular IDEAPAD_ACPI (Closes: #599444)
-  * perf: Move scripts to /usr/share/perf_<version>-core (Closes: #599624)
+  * perf: Enable Perl and Python scripting
+    - Move scripts to /usr/share/perf_<version>-core (Closes: #599624)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
