--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,8 @@ linux-2.6 (2.6.36~rc7-1~experimental.1) UNRELEASED; urgency=low
   * crypto: Explicitly enable algorithm self-tests (Closes: #599441)
   * [x86] Skip looking for ioapic overrides when ioapics are not present
     (Closes: #598533)
+  * [x86] ata_piix: Add device ID for ICH4-L
+  * [armel/iop32x,ia64,x86] Disable BLK_DEV_PIIX as obsolete
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
