--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -19,6 +19,8 @@ linux-2.6 (2.6.36-1~experimental.1) UNRELEASED; urgency=low
     (Closes: #598533)
   * [x86] ata_piix: Add device ID for ICH4-L
   * [armel/iop32x,ia64,x86] Disable BLK_DEV_PIIX as obsolete
+  * [amd64] Disable DRM_I810; i81x chipsets do not support 64-bit processors
+  * [x86] Disable DRM_I830; the i915 driver is now used instead
 
   [ Martin Michlmayr ]
   * Revert "orion/kirkwood: reset PCIe unit on boot" since it breaks
