--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -23,8 +23,7 @@ linux-2.6 (2.6.36-1~experimental.1) UNRELEASED; urgency=low
   * [x86] Disable DRM_I830; the i915 driver is now used instead
 
   [ Martin Michlmayr ]
-  * Revert "orion/kirkwood: reset PCIe unit on boot" since it breaks
-    the QNAP TS-209.
+  * Kirkwood: restrict the scope of the PCIe reset workaround
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
 
