prepare to release 2.6.36-1~experimental.1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16494 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.36-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_36
     - writeback: always use sb->s_bdi for writeback purposes (Closes: #599466)
@@ -25,7 +25,7 @@ linux-2.6 (2.6.36-1~experimental.1) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Kirkwood: restrict the scope of the PCIe reset workaround
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Oct 2010 03:24:21 +0100
+ -- maximilian attems <max@stro.at>  Wed, 27 Oct 2010 13:23:11 +0200
 
 linux-2.6 (2.6.36~rc6-1~experimental.1) experimental; urgency=low
 
