--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
+
+  * Newer Standards-Version 3.9.1 without changes.
+
+ -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
+
 linux-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_36
