--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,10 @@
 linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
 
+  [ maximilian attems ]
   * Newer Standards-Version 3.9.1 without changes.
+
+  [ Martin Michlmayr ]
+  * Add ixp4xx build fix from Arnaud Patard (Closes: #602669)
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
