--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-kbuild-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
+
+  * New upstream version
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 15 Nov 2010 00:20:33 +0000
+
 linux-kbuild-2.6 (2.6.35-1~experimental.1) experimental; urgency=low
 
   * New upstream version
