--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,9 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
   [ Martin Michlmayr ]
   * Add ixp4xx build fix from Arnaud Patard (Closes: #602669)
 
+  [ Ben Hutchings ]
+  * Enable PM_ADVANCED_DEBUG (Closes: #603254)
+
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
 linux-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
