Disable X.25 protocol and related drivers
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16565 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,6 +8,8 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * Enable PM_ADVANCED_DEBUG (Closes: #603254)
+  * Disable X.25 protocol and related drivers.  This 10 year old experiment
+    has stalled and is a source of security bugs.
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
