--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
   * Enable PM_ADVANCED_DEBUG (Closes: #603254)
   * Disable X.25 protocol and related drivers.  This 10 year old experiment
     has stalled and is a source of security bugs.
+  * Disable Econet protocol.  It is unmaintained upstream, probably broken,
+    and of historical interest only.
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
