debian/rules: Change 'clean' rule to remove package build directories even after a version bump, thanks to Timo Juhani Lindfors
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16576 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -15,6 +15,8 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
   * af_802154,decnet,rds: Disable auto-loading as mitigation against local
     exploits.  These protocol modules are not widely used and can be
     explicitly loaded or aliased on systems where they are wanted.
+  * debian/rules: Change 'clean' rule to remove package build directories
+    even after a version bump, thanks to Timo Juhani Lindfors
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
