--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
 
   [ Martin Michlmayr ]
   * Add ixp4xx build fix from Arnaud Patard (Closes: #602669)
+  * [armel/kirkwood] Enable sound.
 
   [ Ben Hutchings ]
   * Enable PM_ADVANCED_DEBUG (Closes: #603254)
