--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,3 +1,4 @@
 + debian/af_802154-Disable-auto-loading-as-mitigation-against.patch
 + debian/rds-Disable-auto-loading-as-mitigation-against-local.patch
 + debian/decnet-Disable-auto-loading-as-mitigation-against-lo.patch
++ features/arm/asoc-openrd-ultimate.patch
