--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,6 @@
-linux-2.6 (2.6.36-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.37~rc3-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
 
   [ maximilian attems ]
   * Newer Standards-Version 3.9.1 without changes.
