dm: Deal with merge_bvec_fn in component devices better (Closes: #604457)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16610 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -21,6 +21,7 @@ linux-2.6 (2.6.37~rc3-1~experimental.1) UNRELEASED; urgency=low
     explicitly loaded or aliased on systems where they are wanted.
   * debian/rules: Change 'clean' rule to remove package build directories
     even after a version bump, thanks to Timo Juhani Lindfors
+  * dm: Deal with merge_bvec_fn in component devices better (Closes: #604457)
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
