9p: Enable 9P_FS_POSIX_ACL
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16633 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * debian/rules: Change 'clean' rule to remove package build directories
     even after a version bump, thanks to Timo Juhani Lindfors
   * dm: Deal with merge_bvec_fn in component devices better (Closes: #604457)
+  * 9p: Enable 9P_FS_POSIX_ACL
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
