--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -24,6 +24,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * dm: Deal with merge_bvec_fn in component devices better (Closes: #604457)
   * 9p: Enable 9P_FS_POSIX_ACL
   * netfilter: Enable IP_VS_PE_SIP
+  * net/sched: Enable NET_ACT_CSUM
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
