can: Enable CAN_SJA1000_ISA, CAN_TSCAN1 as modules
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16639 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -25,6 +25,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * 9p: Enable 9P_FS_POSIX_ACL
   * netfilter: Enable IP_VS_PE_SIP
   * net/sched: Enable NET_ACT_CSUM
+  * can: Enable CAN_SJA1000_ISA, CAN_TSCAN1 as modules
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
