block: Enable BLK_DEV_RBD (Rados) as module
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16642 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -26,6 +26,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * netfilter/ipvs: Enable IP_VS_PE_SIP as module
   * net/sched: Enable NET_ACT_CSUM as module
   * can: Enable CAN_SJA1000_ISA, CAN_TSCAN1 as modules
+  * block: Enable BLK_DEV_RBD (Rados) as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
