--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -29,6 +29,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * block: Enable BLK_DEV_RBD (Rados) as module
   * sensors: Enable AD525X_DPOT_SPI, APDS9802ALS, ISL29020, SENSORS_BH1780,
     SENSORS_BH1770, SENSORS_APDS990X, HMC6352, BMP085 as modules
+  * scsi: Enable SCSI_CXGB4_ISCSI as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
