--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -33,6 +33,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * net/ppp: Enable PPTP as module
   * net: Enable BNA, SMCTR, USB_NET_CX82310_ETH as modules
   * IR: Enable IR_RC5_SZ_DECODER as module
+  * [i386] IR: Enable IR_NUVOTON as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
