V4L: Enable GSPCA_KONICA, GSPCA_XIRLINK_CIT as modules
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16653 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -34,6 +34,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * net: Enable BNA, SMCTR, USB_NET_CX82310_ETH as modules
   * IR: Enable IR_RC5_SZ_DECODER as module
   * [i386] IR: Enable IR_NUVOTON as module
+  * V4L: Enable GSPCA_KONICA, GSPCA_XIRLINK_CIT as modules
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
