--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -35,6 +35,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * IR: Enable IR_RC5_SZ_DECODER as module
   * [i386] IR: Enable IR_NUVOTON as module
   * V4L: Enable GSPCA_KONICA, GSPCA_XIRLINK_CIT as modules
+  * DVB: Enable USB_LME2510 as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
