--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -36,6 +36,8 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * [i386] IR: Enable IR_NUVOTON as module
   * V4L: Enable GSPCA_KONICA, GSPCA_XIRLINK_CIT as modules
   * DVB: Enable USB_LME2510 as module
+  * [i386] sound/isa: Enable SND_AZT1605, SND_AZT2316, SND_JAZZ16,
+    SND_MSND_PINNACLE, SND_MSND_CLASSIC as modules
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
