HID: Enable HID_UCLOGIC, HID_WALTOP, HID_ROCCAT_PYRA as modules
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16659 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -38,6 +38,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * DVB: Enable USB_LME2510 as module
   * [i386] sound/isa: Enable SND_AZT1605, SND_AZT2316, SND_JAZZ16,
     SND_MSND_PINNACLE, SND_MSND_CLASSIC as modules
+  * HID: Enable HID_UCLOGIC, HID_WALTOP, HID_ROCCAT_PYRA as modules
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
