--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -39,6 +39,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * [i386] sound/isa: Enable SND_AZT1605, SND_AZT2316, SND_JAZZ16,
     SND_MSND_PINNACLE, SND_MSND_CLASSIC as modules
   * HID: Enable HID_UCLOGIC, HID_WALTOP, HID_ROCCAT_PYRA as modules
+  * hid-logitech: Enable LOGIWII_FF
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
