Enable USB_UAS (USB-attached SCSI) as module
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16661 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -40,6 +40,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
     SND_MSND_PINNACLE, SND_MSND_CLASSIC as modules
   * HID: Enable HID_UCLOGIC, HID_WALTOP, HID_ROCCAT_PYRA as modules
   * hid-logitech: Enable LOGIWII_FF
+  * Enable USB_UAS (USB-attached SCSI) as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
