--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -41,6 +41,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * HID: Enable HID_UCLOGIC, HID_WALTOP, HID_ROCCAT_PYRA as modules
   * hid-logitech: Enable LOGIWII_FF
   * Enable USB_UAS (USB-attached SCSI) as module
+  * serial: Enable USB_SERIAL_SAMBA as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
