--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -42,6 +42,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * hid-logitech: Enable LOGIWII_FF
   * Enable USB_UAS (USB-attached SCSI) as module
   * serial: Enable USB_SERIAL_SAMBA as module
+  * drm/nouveau: Enable DRM_I2C_SIL164 as module
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
