firmware: Correct copyright information and add source for CIS files
(accidentally omitted when merging from sid branch)


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16670 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -45,6 +45,8 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * drm/nouveau: Enable DRM_I2C_SIL164 as module
   * perf: Use libiberty, not libbfd, for symbol demangling
     (Closes: #604750, #606050)
+  * firmware: Correct copyright information and add source for CIS files
+    (accidentally omitted when merging from sid branch)
 
  -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
 
