Prepare to release linux-2.6 (2.6.37~rc4-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16671 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.37~rc4-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
 
@@ -48,7 +48,7 @@ linux-2.6 (2.6.37~rc4-1~experimental.1) UNRELEASED; urgency=low
   * firmware: Correct copyright information and add source for CIS files
     (accidentally omitted when merging from sid branch)
 
- -- maximilian attems <max@stro.at>  Wed, 31 Oct 2010 13:23:11 +0200
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 05 Dec 2010 23:19:38 +0000
 
 linux-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
 
