--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.37~rc5-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 09 Dec 2010 01:37:33 +0000
+
 linux-2.6 (2.6.37~rc4-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
