--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,12 @@ linux-2.6 (2.6.37~rc5-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release candidate
 
+  [ Ben Hutchings ]
+  * Attempt to fix FTBFS on various architectures:
+    - [alpha] Do not use -Werror for arch/alpha/kernel
+    - [arm/ixp4xx] Rename FREQ macro to avoid collisions
+    - [mips] Add the necessary parameter to mips_sc_is_activated()
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 09 Dec 2010 01:37:33 +0000
 
 linux-2.6 (2.6.37~rc4-1~experimental.1) experimental; urgency=low
