Prepare to release linux-2.6 (2.6.37~rc5-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16691 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.37~rc5-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.37~rc5-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
 
@@ -8,7 +8,7 @@ linux-2.6 (2.6.37~rc5-1~experimental.1) UNRELEASED; urgency=low
     - [arm/ixp4xx] Rename FREQ macro to avoid collisions
     - [mips] Add the necessary parameter to mips_sc_is_activated()
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 09 Dec 2010 01:37:33 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 10 Dec 2010 02:59:12 +0000
 
 linux-2.6 (2.6.37~rc4-1~experimental.1) experimental; urgency=low
 
