--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,13 @@
+linux-2.6 (2.6.37~rc5-1~experimental.2) UNRELEASED; urgency=low
+
+  * Second attempt to fix FTBFS on various architectures:
+    - [alpha] Do not use -Werror for arch/alpha
+    - [arm/ixp4xx] Rename FREQ macro to avoid collisions (v2)
+    - drm/nouveau: Only select ACPI_VIDEO if its dependencies are met
+    - [mips] Change mips_sc_is_activated() to do what the comment says
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 06:27:51 +0000
+
 linux-2.6 (2.6.37~rc5-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
