--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.37~rc5-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.37~rc5-1~experimental.2) experimental; urgency=low
 
   * Second attempt to fix FTBFS on various architectures:
     - [alpha] Do not use -Werror for arch/alpha
