--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.37~rc5-1~experimental.3) experimental; urgency=low
+
+  * Really apply patches added in the previous version
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 16:27:21 +0000
+
 linux-2.6 (2.6.37~rc5-1~experimental.2) experimental; urgency=low
 
   * Second attempt to fix FTBFS on various architectures:
