--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.37~rc5-1~experimental.4) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * debian/copyright: Add explanation of indirect linking of perf to
+    OpenSSL (Closes: #606520)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
+
 linux-2.6 (2.6.37~rc5-1~experimental.3) experimental; urgency=low
 
   * Really apply patches added in the previous version
