--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,8 @@ linux-2.6 (2.6.37~rc5-1~experimental.4) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * debian/copyright: Add explanation of indirect linking of perf to
     OpenSSL (Closes: #606520)
+  * [powerpc,x86] Enable PATA_PCMCIA (Closes: #606324)
+  * Disable BLK_DEV_IDECS
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
 
