[alpha] Use libata-based drivers for most PATA controllers
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16703 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.37~rc5-1~experimental.4) UNRELEASED; urgency=low
     OpenSSL (Closes: #606520)
   * [powerpc,x86] Enable PATA_PCMCIA (Closes: #606324)
   * Disable BLK_DEV_IDECS
+  * [alpha] Use libata-based drivers for most PATA controllers
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
 
