--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,7 @@
-linux-2.6 (2.6.37~rc5-1~experimental.4) UNRELEASED; urgency=low
+linux-2.6 (2.6.37~rc7-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+    - [mips] Rename mips_dma_cache_sync back to dma_cache_sync (fixes FTBFS)
 
   [ Ben Hutchings ]
   * debian/copyright: Add explanation of indirect linking of perf to
@@ -6,7 +9,6 @@ linux-2.6 (2.6.37~rc5-1~experimental.4) UNRELEASED; urgency=low
   * [powerpc,x86] Enable PATA_PCMCIA (Closes: #606324)
   * Disable BLK_DEV_IDECS
   * [alpha] Use libata-based drivers for most PATA controllers
-  * [mips] Restore dma_cache_sync() (fix yet another FTBFS)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
 
