--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -22,6 +22,7 @@ linux-2.6 (2.6.37~rc7-1~experimental.1) UNRELEASED; urgency=low
   * debian/bin/test-patches: Restrict patches to featureset when building
     with a featureset (thanks to Tim Small)
   * Recommend use of 'make deb-pkg' to build custom kernel packages
+  * [ia64] drm/nouveau: Revert unnecessary exclusion of ACPI support code
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
 
