Prepare to release linux-2.6 (2.6.37~rc7-1~experimental.1)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16738 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,5 +1,5 @@
-linux-2.6 (2.6.37~rc7-1~experimental.1) UNRELEASED; urgency=low
-
+linux-2.6 (2.6.37~rc7-1~experimental.1) experimental; urgency=low
+  
   * New upstream release candidate
     - [mips] Rename mips_dma_cache_sync back to dma_cache_sync (fixes FTBFS)
 
@@ -24,7 +24,7 @@ linux-2.6 (2.6.37~rc7-1~experimental.1) UNRELEASED; urgency=low
   * Recommend use of 'make deb-pkg' to build custom kernel packages
   * [ia64] drm/nouveau: Revert unnecessary exclusion of ACPI support code
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sat, 11 Dec 2010 21:21:10 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 25 Dec 2010 16:21:09 +0000
 
 linux-2.6 (2.6.37~rc5-1~experimental.3) experimental; urgency=low
 
