--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.37~rc7-1~experimental.2) UNRELEASED; urgency=low
+
+  * i2c-i801: Include <linux/slab.h> (fixes FTBFS on alpha)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 28 Dec 2010 03:15:05 +0000
+
 linux-2.6 (2.6.37~rc7-1~experimental.1) experimental; urgency=low
   
   * New upstream release candidate
