watchdog: Improve failure message and documentation (Closes: #608138)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16754 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.37~rc8-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * i2c-i801: Include <linux/slab.h> (fixes FTBFS on alpha)
   * starfire: Fix dma_addr_t size test for MIPS (fixes FTBFS)
+  * watchdog: Improve failure message and documentation (Closes: #608138)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 28 Dec 2010 03:15:05 +0000
 
