[x86] Staging: Enable R8712U as module (r8712u, replacing r8192s_usb)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16757 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,6 +6,8 @@ linux-2.6 (2.6.37~rc8-1~experimental.1) UNRELEASED; urgency=low
   * i2c-i801: Include <linux/slab.h> (fixes FTBFS on alpha)
   * starfire: Fix dma_addr_t size test for MIPS (fixes FTBFS)
   * watchdog: Improve failure message and documentation (Closes: #608138)
+  * [x86] Staging: Enable R8712U as module (r8712u, replacing r8192s_usb)
+    - Enable loading external firmware, thanks to Stefan Lippers-Hollmann
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 28 Dec 2010 03:15:05 +0000
 
