--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,6 +1,6 @@
-linux-2.6 (2.6.37~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
 
-  * New upstream release candidate
+  * New upstream release: http://kernelnewbies.org/Linux_2_6_37
 
   [ Ben Hutchings ]
   * i2c-i801: Include <linux/slab.h> (fixes FTBFS on alpha)
