Move the two fixes that snuck into 2.6.37
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16776 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,11 +1,11 @@
 linux-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_37
+    - starfire: Fix dma_addr_t size test for MIPS (fixes FTBFS)
+    - watchdog: Improve failure message and documentation (Closes: #608138)
 
   [ Ben Hutchings ]
   * i2c-i801: Include <linux/slab.h> (fixes FTBFS on alpha)
-  * starfire: Fix dma_addr_t size test for MIPS (fixes FTBFS)
-  * watchdog: Improve failure message and documentation (Closes: #608138)
   * [x86] Staging: Enable R8712U as module (r8712u, replacing r8192s_usb)
     - Enable loading external firmware, thanks to Stefan Lippers-Hollmann
   * linux-base: Look for GRUB 1 configuration in both /boot/grub and
