--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.37-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_37
     - starfire: Fix dma_addr_t size test for MIPS (fixes FTBFS)
@@ -14,7 +14,7 @@ linux-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
   * r8169: Change RTL8111D/RTL8168D initialisation and firmware loading to
     match upstream version (Closes: #596390 with firmware-realtek 0.28)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 28 Dec 2010 03:15:05 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 05 Jan 2011 02:44:28 +0000
 
 linux-2.6 (2.6.37~rc7-1~experimental.1) experimental; urgency=low
   
