--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,11 @@
+linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
+    in another build failure
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
+
 linux-2.6 (2.6.37-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_37
