--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,6 +1,7 @@
 linux-kbuild-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream version
+  * Include new script gcc-goto.sh
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jan 2011 13:11:23 +0000
 
