--- a/linux-kbuild-2.6/debian/changelog
+++ b/linux-kbuild-2.6/debian/changelog
@@ -1,9 +1,9 @@
-linux-kbuild-2.6 (2.6.37-1~experimental.1) UNRELEASED; urgency=low
+linux-kbuild-2.6 (2.6.37-1~experimental.1) experimental; urgency=low
 
   * New upstream version
   * Include new script gcc-goto.sh
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jan 2011 13:11:23 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 16 Jan 2011 15:14:34 +0000
 
 linux-kbuild-2.6 (2.6.36-1~experimental.1) experimental; urgency=low
 
