--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,9 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
     in another build failure
 
+  [ Aurelien Jarno ]
+  * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
 linux-2.6 (2.6.37-1~experimental.1) experimental; urgency=low
