r8169: Keep firmware in memory (Closes: #609538)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16846 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,2 +1,3 @@
 - bugfix/arm/ixp4xx-add-missing-export.patch
 + bugfix/sh4/sh-export-topology-core-cpumask.patch
++ bugfix/all/r8169-keep-firmware-in-memory.patch
