--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,7 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
     in another build failure
+  * r8169: Keep firmware in memory (Closes: #609538)
 
   [ Aurelien Jarno ]
   * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
