r8712u: Firmware filename is rtlwifi/rtl8712u.bin (Closes: #602450)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16847 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
     in another build failure
   * r8169: Keep firmware in memory (Closes: #609538)
+  * r8712u: Firmware filename is rtlwifi/rtl8712u.bin (Closes: #602450)
 
   [ Aurelien Jarno ]
   * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
