--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -1,3 +1,5 @@
 - bugfix/arm/ixp4xx-add-missing-export.patch
 + bugfix/sh4/sh-export-topology-core-cpumask.patch
 + bugfix/all/r8169-keep-firmware-in-memory.patch
+- features/all/r8712u-Fix-external-firmware-loading.patch
++ features/all/r8712u-Firmware-changes-for-driver.patch
