[sparc] Fix misaligned tracing information (Closes: #609371)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16848 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/patches/series/1~experimental.2
+++ b/linux-2.6/debian/patches/series/1~experimental.2
@@ -3,3 +3,5 @@
 + bugfix/all/r8169-keep-firmware-in-memory.patch
 - features/all/r8712u-Fix-external-firmware-loading.patch
 + features/all/r8712u-Firmware-changes-for-driver.patch
++ bugfix/sparc/introduce-u64-aligned.patch
++ bugfix/sparc/tracing-use-u64-aligned-as-type-and-variable-attribute.patch
