--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,8 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
     in another build failure
   * r8169: Keep firmware in memory (Closes: #609538)
   * r8712u: Firmware filename is rtlwifi/rtl8712u.bin (Closes: #602450)
+  * [sparc] Fix misaligned tracing information which the module loader
+    does not support (Closes: #609371)
 
   [ Aurelien Jarno ]
   * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
