--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,7 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
+  * [mips/5kc-malta] Enable CONFIG_VGA_CONSOLE.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
