--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -12,6 +12,9 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
   * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
   * [mips/5kc-malta] Enable CONFIG_VGA_CONSOLE.
 
+  [ Bastian Blank ]
+  * Enable CIFS fscache and ACL support.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
 linux-2.6 (2.6.37-1~experimental.1) experimental; urgency=low
