--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
 
   [ Bastian Blank ]
   * Enable CIFS fscache and ACL support.
+  * Enable Xen PCI frontend.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
