Update to 2.6.38-rc5
Adjust/remove patches as appropriate.


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16898 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,15 +1,17 @@
-linux-2.6 (2.6.37-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release candidate
+    - r8169: Keep firmware in memory (Closes: #609538)
+    - [sparc] Fix misaligned tracing information which the module loader
+      does not support (Closes: #609371)
+    - [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
 
   [ Ben Hutchings ]
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
     in another build failure
-  * r8169: Keep firmware in memory (Closes: #609538)
   * r8712u: Firmware filename is rtlwifi/rtl8712u.bin (Closes: #602450)
-  * [sparc] Fix misaligned tracing information which the module loader
-    does not support (Closes: #609371)
 
   [ Aurelien Jarno ]
-  * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
   * [mips/5kc-malta] Enable CONFIG_VGA_CONSOLE.
 
   [ Bastian Blank ]
