--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,7 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
     - [sparc] Fix misaligned tracing information which the module loader
       does not support (Closes: #609371)
     - [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
+    - [armel] Support for Buffalo LS-CHL (Closes: #590105).
 
   [ Ben Hutchings ]
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
