--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,12 +7,20 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
     - [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
     - [armel] Support for Buffalo LS-CHL (Closes: #590105).
 
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
+
+linux-2.6 (2.6.37-1) UNRELEASED; urgency=low
+
   [ Ben Hutchings ]
   * [arm] ixp4xx: Revert build fix, now applied upstream which resulted
     in another build failure
+  * r8169: Keep firmware in memory (Closes: #609538)
   * r8712u: Firmware filename is rtlwifi/rtl8712u.bin (Closes: #602450)
+  * [sparc] Fix misaligned tracing information which the module loader
+    does not support (Closes: #609371)
 
   [ Aurelien Jarno ]
+  * [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
   * [mips/5kc-malta] Enable CONFIG_VGA_CONSOLE.
 
   [ Bastian Blank ]
