--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,11 +1,15 @@
 linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
 
+  [ Ben Hutchings ]
   * New upstream release candidate
     - r8169: Keep firmware in memory (Closes: #609538)
     - [sparc] Fix misaligned tracing information which the module loader
       does not support (Closes: #609371)
     - [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
     - [armel] Support for Buffalo LS-CHL (Closes: #590105).
+
+  [ maximilian attems ]
+  * [x86] linux-images suggest extlinux, s/grub/grub-pc/. (closes: #613909)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
