* mips/swarm: enable PATA drivers that have been lost during IDE -> PATA     conversion.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16915 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,6 +13,10 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
   [ maximilian attems ]
   * [x86] linux-images suggest extlinux, s/grub/grub-pc/. (closes: #613909)
 
+  [ Aurelien Jarno]
+  * mips/swarm: enable PATA drivers that have been lost during IDE -> PATA
+    conversion.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
 linux-2.6 (2.6.37-1) unstable; urgency=low
