--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -16,6 +16,7 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
   [ Aurelien Jarno]
   * mips/swarm: enable PATA drivers that have been lost during IDE -> PATA
     conversion.
+  * mips/malta-[45]kc: set VIRTUALIZATION.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
 
