--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,8 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
       does not support (Closes: #609371)
     - [sh4] Export cpu_core_map to fix build failure with CONFIG_SFC=m.
     - [armel] Support for Buffalo LS-CHL (Closes: #590105).
+  * DFSG: Remove drivers/staging/ft1000/ft1000-pcmcia/boot.h, non-free
+    firmware for a driver we don't build (Closes: #609448)
   * module,bug: Add TAINT_OOT_MODULE flag for modules that weren't built
     in-tree
 
