Prepare to release linux-2.6 (2.6.38~rc5-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16926 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc5-1~experimental.1) experimental; urgency=low
 
   [ Ben Hutchings ]
   * New upstream release candidate
@@ -23,7 +23,7 @@ linux-2.6 (2.6.38~rc5-1~experimental.1) UNRELEASED; urgency=low
     conversion.
   * mips/malta-[45]kc: set VIRTUALIZATION.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Jan 2011 00:39:29 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 Feb 2011 05:02:11 +0000
 
 linux-2.6 (2.6.37-1) unstable; urgency=low
 
