changelog prepare to release 2.6.38~rc6-1~experimental.1
add another bug closure of today.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16934 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,7 +1,8 @@
-linux-2.6 (2.6.38~rc6-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc6-1~experimental.1) experimental; urgency=low
 
   [ Ben Hutchings ]
   * New upstream release candidate
+    - drm/radeon/kms: hopefully fix pll issues for real (v3) (Closes: #614566)
     - r8169: Keep firmware in memory (Closes: #609538)
     - [sparc] Fix misaligned tracing information which the module loader
       does not support (Closes: #609371)
@@ -23,7 +24,7 @@ linux-2.6 (2.6.38~rc6-1~experimental.1) UNRELEASED; urgency=low
     conversion.
   * mips/malta-[45]kc: set VIRTUALIZATION.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 Feb 2011 05:02:11 +0000
+ -- maximilian attems <maks@debian.org>  Tue, 22 Feb 2011 14:36:33 +0100
 
 linux-2.6 (2.6.37-1) unstable; urgency=low
 
