--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * New upstream release candidate
+  * x86: Set DRM_I915_KMS on request by xorg team.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 Mar 2011 05:38:48 +0000
 
