Add a bug closure in 2.6.38-rc7
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@16992 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
 
   [ maximilian attems ]
   * New upstream release candidate
+    - swiotlb: Fix wrong panic (Closes: #615990)
   * x86: Set DRM_I915_KMS on request by xorg team.
 
   [ Ben Hutchings ]
