Add bug closure for vt6656
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17009 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -8,7 +8,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [x86] Correct typos in label names in two asm functions (Closes: #616426)
   * [x86] Enable VT6656, loading firmware from a separate file (requires
-    firmware-linux-nonfree 0.29)
+    firmware-linux-nonfree 0.29) (Closes: #568454)
 
  -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
