Update and reenable aufs
Include a fix for a nasty bug in aufs/TOMOYO interaction.
(The fix is not required in squeeze.)


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17013 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -11,6 +11,8 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
     firmware-linux-nonfree 0.29) (Closes: #568454)
   * perf: Build with libdwarf for improved analysis capabilities
   * perf: Build with newt for improved user interface (Closes: #615868)
+  * aufs: Update for 2.6.38
+  * aufs: Fix device numbers passed to security_path_mknod()
 
  -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
