dib0700/dib7000m: Add pid filtering (Closes: #614837)
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17015 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -13,6 +13,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   * perf: Build with newt for improved user interface (Closes: #615868)
   * aufs: Update for 2.6.38
   * aufs: Fix device numbers passed to security_path_mknod()
+  * dib0700/dib7000m: Add pid filtering (Closes: #614837)
 
  -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
 
