Prepare to release linux-2.6 (2.6.38~rc7-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17024 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc7-1~experimental.1) experimental; urgency=low
 
   [ maximilian attems ]
   * New upstream release candidate
@@ -16,7 +16,7 @@ linux-2.6 (2.6.38~rc7-1~experimental.1) UNRELEASED; urgency=low
   * dib0700/dib7000m: Add pid filtering (Closes: #614837)
   * [powerpc] Revert fb module changes (Closes: #614221)
 
- -- maximilian attems <maks@debian.org>  Thu, 03 Mar 2011 16:00:38 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 08 Mar 2011 02:34:04 +0000
 
 linux-2.6 (2.6.38~rc6-1~experimental.1) experimental; urgency=low
 
