[arm] Fix .size directive for xscale_dma_a0_map_area
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17042 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -4,6 +4,7 @@ linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [sparc] Fix .size directive for do_int_load
+  * [arm] Fix .size directive for xscale_dma_a0_map_area
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Mar 2011 01:10:58 +0000
 
