Prepare to relase linux-2.6 (2.6.38~rc8-1~experimental.1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17043 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38~rc8-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate
 
@@ -6,7 +6,7 @@ linux-2.6 (2.6.38~rc8-1~experimental.1) UNRELEASED; urgency=low
   * [sparc] Fix .size directive for do_int_load
   * [arm] Fix .size directive for xscale_dma_a0_map_area
 
- -- Ben Hutchings <ben@decadent.org.uk>  Wed, 09 Mar 2011 01:10:58 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 03:31:52 +0000
 
 linux-2.6 (2.6.38~rc7-1~experimental.1) experimental; urgency=low
 
