Remove the Big Kernel Lock:
adfs,appletalk,i810,ufs,usbip: Refactor locking
hpfs: Disable HPFS_FS


git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17064 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,9 @@ linux-2.6 (2.6.38~rc8-1~experimental.2) UNRELEASED; urgency=low
   * Move linux-base to separate source package
   * net/can: Enable CAN_SLCAN as module (Closes: #617629)
   * sound: Enable SND_ALOOP as module (Closes: #617869)
+  * Remove the Big Kernel Lock:
+    - adfs,appletalk,i810,ufs,usbip: Refactor locking
+    - hpfs: Disable HPFS_FS
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 08:57:58 +0000
 
