ext4: Disable FS_IOC_FIEMAP ioctl temporarily
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17070 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,8 @@ linux-2.6 (2.6.38-1) UNRELEASED; urgency=low
   * Remove the Big Kernel Lock:
     - adfs,appletalk,i810,ufs,usbip: Refactor locking
     - hpfs: Disable HPFS_FS
+  * ext4: Disable FS_IOC_FIEMAP ioctl temporarily (together with fixes
+    for btrfs in 2.6.38, closes: #615035)
 
   [ Aurelien Jarno]
   * mips/malta-[45]kc: 
