--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -14,6 +14,7 @@ linux-2.6 (2.6.38-1) UNRELEASED; urgency=low
     for btrfs in 2.6.38, closes: #615035)
   * sched: Build with SCHED_AUTOGROUP, but do not enable autogrouping by
     default (use sysctl kernel.sched_autogroup_enabled=1) (Closes: #618486)
+  * Set ABI to 1
 
   [ Aurelien Jarno]
   * mips/malta-[45]kc: 
