Prepare to release linux-2.6 (2.6.38-1).
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17076 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.38-1) UNRELEASED; urgency=low
+linux-2.6 (2.6.38-1) unstable; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_2_6_38
 
@@ -21,7 +21,7 @@ linux-2.6 (2.6.38-1) UNRELEASED; urgency=low
     - disable ATM, TR, WAN.
     - synchronize options in malta-4kc and malta-5kc.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sat, 12 Mar 2011 08:57:58 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 16 Mar 2011 04:47:57 +0000
 
 linux-2.6 (2.6.38~rc8-1~experimental.1) experimental; urgency=low
 
