prepare to release 2.6.39~rc6-1~experimental.1
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17320 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.39~rc6-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (2.6.39~rc6-1~experimental.1) experimental; urgency=low
 
   * New upstream release candidate  
 
@@ -16,7 +16,7 @@ linux-2.6 (2.6.39~rc6-1~experimental.1) UNRELEASED; urgency=low
   * [mips,mipsel] Disabled CONFIG_DRM_NOUVEAU and CONFIG_DRM_RADEON_KMS.
   * [mips/octeon] Disabled CONFIG_HOTPLUG_CPU and CONFIG_PM.
 
- -- maximilian attems <maks@debian.org>  Tue, 01 May 2011 14:36:33 +0100
+ -- maximilian attems <maks@debian.org>  Sun, 08 May 2011 12:23:15 +0200
 
 linux-2.6 (2.6.39~rc5-1~experimental.1) experimental; urgency=low
 
