topconfig enable modular SCSI_BNX2X_FCOE
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17373 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,7 +6,7 @@ linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
   * topconfig: Enable modular NF_CONNTRACK_TIMESTAMP, NF_CONNTRACK_SNMP,
     NETFILTER_XT_TARGET_AUDIT, NETFILTER_XT_MATCH_ADDRTYPE,
     NETFILTER_XT_MATCH_DEVGROUP, NET_SCH_SFB, NET_SCH_MQPRIO, NET_SCH_CHOKE,
-    SATA_ACARD_AHCI, PATA_ARASAN_CF.
+    SATA_ACARD_AHCI, PATA_ARASAN_CF, SCSI_BNX2X_FCOE.
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
