topconfig enable RTL8192CU too
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17375 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -9,6 +9,7 @@ linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
     SATA_ACARD_AHCI, PATA_ARASAN_CF, SCSI_BNX2X_FCOE.
   * Add nl debconf template translation. (closes: #622967)
     Thanks willem kuyn <willemkuyn@gmail.com>.
+  * topconfig Enable modular RTL8192CU. (closes: #625613)
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
