topconfig enable SND_FIREWIRE_SPEAKERS
driver for playback-only fw devices

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17381 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,7 +1,7 @@
 linux-2.6 (2.6.39~rc7-1~experimental.2) experimental; urgency=low
 
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
-  * topconfig: Enable SND_USB_6FIRE.
+  * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS.
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
