topconfig enable memory cgroup
upstream worked reducing overhaed for example: 569b846d and cdec2e42

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@17389 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,6 +5,8 @@ linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
     MEDIA_CONTROLLER, DVB_USB_TECHNISAT_USB2, USB_GSPCA_NW80X,
     USB_GSPCA_VICAM, XEN_WDT.
   * [x86] Enable modular XEN_NETDEV_BACKEND.
+  * topconfig enable mem cgroup RESOURCE_COUNTERS, CGROUP_MEM_RES_CTLR.
+    (closes: #534964)
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
